Updated links and fixed overflow issue

--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -15,4 +15,11 @@
     }
 
   }
+
+  body{
+    overflow-x: hidden;
+    /* width:100vw; */
+  }
+
+  
   
